--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "type": "module",
     "scripts": {
-        "prettier": "prettier *.js --write *.json",
+        "prettier": "prettier *.js --write *.json *.md",
         "start": "node --experimental-modules --experimental-json-modules ./cli.js "
     },
     "dependencies": {
@@ -11,7 +11,9 @@
         "@types/node": "^13.7.1",
         "find": "^0.3.0",
         "fs-extra": "^8.1.0",
-        "prettier": "^1.19.1"
+        "prettier": "^1.19.1",
+        "tslib": "^1.10.0",
+        "typescript": "^3.7.5"
     },
     "name": "@masx200/baidupcs-batch-upload",
     "version": "1.0.0",
