添加可选参数reverse,添加baidupcs-go错误记录

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
-    "include": ["*.js", "*.ts"],
+    "exclude": ["*.d.ts"],
+    "include": ["*.js"],
     "compilerOptions": {
         "pretty": true,
         "removeComments": true,
