--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
+#改造成typescript
 # Auto detect text files and perform LF normalization
-* text=auto
+#* text=auto
+*.ts linguist-language=Typescript 
+*.js linguist-language=Typescript 
+*.css linguist-language=Typescript 
+*.html linguist-language=Typescript 
+*.jsx linguist-language=Typescript
