--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-    "version": "1.0.4",
-    "types": "index.d.ts",
-    "module": "index.js",
+    "main": "./lib/index.js",
+    "version": "1.0.5",
+    "types": "./lib/index.d.ts",
+    "module": "./lib/index.js",
     "type": "module",
     "scripts": {
         "watch": "tsc --watch",
         "build": "tsc",
-        "prettier": "prettier *.ts *.js --write *.json *.md",
-        "start": "node --experimental-modules --experimental-json-modules ./cli.js "
+        "prettier": "prettier */**/*.ts *.js --write *.json *.md",
+        "start": "node --experimental-modules --experimental-json-modules ./lib/cli.js "
     },
     "dependencies": {
         "@masx200/async-task-current-limiter": "^1.0.7",
@@ -21,7 +22,6 @@
         "typescript": "^3.7.5"
     },
     "name": "@masx200/baidupcs-batch-upload",
-    "main": "index.js",
     "license": "MIT",
     "devDependencies": {},
     "keywords": [],
