--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "exclude": [],
-    "include": ["*.ts"],
+    "include": ["./**/*.ts"],
     "compilerOptions": {
         "pretty": true,
         "removeComments": true,
