--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "watch": "tsc --watch",
         "build": "tsc",
-        "prettier": "prettier */**/*.ts *.js --write *.json *.md",
+        "prettier": "prettier */**/*.ts **/*.js --write *.json *.md",
         "start": "node --experimental-modules --experimental-json-modules ./lib/cli.js "
     },
     "dependencies": {
