--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
     "name": "@masx200/baidupcs-batch-upload",
     "bin": "./lib/cli.js",
     "main": "./lib/index.js",
-    "version": "1.1.7",
+    "version": "1.1.8",
     "types": "./lib/index.d.ts",
     "module": "./lib/index.js",
     "type": "module",
     "scripts": {
         "watch": "tsc --watch",
         "build": "tsc",
-        "prettier": "prettier */**/*.ts **/*.js --write *.json *.md",
+        "prettier": "prettier **/*.ts **/*.js --write *.json *.md",
         "start": "node --experimental-modules --experimental-json-modules ./lib/cli.js "
     },
     "dependencies": {
