--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
         "start": "node --experimental-modules --experimental-json-modules ./lib/cli.js "
     },
     "dependencies": {
+        "@masx200/async-task-current-limiter": "1.0.9",
         "@shanyue/promise-utils": "2.0.4",
-        "@masx200/async-task-current-limiter": "^1.0.9",
-        "find": "^0.3.0",
-        "fs-extra": "^8.1.0"
+        "find": "0.3.0",
+        "fs-extra": "8.1.0"
     },
     "license": "MIT",
     "devDependencies": {
-        "@types/find": "^0.2.1",
-        "@types/fs-extra": "^8.0.1",
-        "@types/node": "^13.7.1",
-        "prettier": "^2.0.5",
-        "tslib": "^1.10.0",
-        "typescript": "^3.9.7"
+        "@types/find": "0.2.1",
+        "@types/fs-extra": "8.1.1",
+        "@types/node": "13.13.15",
+        "prettier": "2.0.5",
+        "tslib": "1.13.0",
+        "typescript": "3.9.7"
     },
     "keywords": [],
     "author": "masx200 <34191203+masx200@users.noreply.github.com>",
